      up.
    + Fix removal of unused code (that part of the code that we know of so
      far). (The debian/rules file is a Makefile and Makefiles don't understand
      shell globbing with curly braces).
    + Correctly link config files (etc/rgb, etc/nxagent.keyboard,
      etc/x2goagent.keyboard) before dh_auto_build.
    + Add to B-D: expat.

  * nx-libs.spec:
    + The gpg-offline bin:package is not available in our SLE repo. We can do
      without.
    + Update .spec file to meet changes in tarball size reduction and
      restructuring.

  * debian/roll-tarball.sh:
    + Install etc/ files into etc/ subfolder (rgb, nxagent.keyboard,
      x2goagent.keyboard).

  [ Horst Schirmeier ]
  * Update 320_nxagent_configurable-keystrokes.full.patch. Fix a typo that
    prevented the /etc/nxagent/keystrokes.cfg file from being parsed. (Fixes:
    #741).
  * Add 321_nxagent_x2go-specific-keystroke-config.full.patch. If nxagent is
    launched as x2goagent, use X2Go-specific paths for the keystrokes.cfg file.
    (Fixes: #744).

  [ Mihai Moldovan ]
  * Change string "X2go" to "X2Go" where appropriate.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Thu, 13 Nov 2014 21:59:00 +0100

nx-libs (2:3.5.0.28-0x2go1) unstable; urgency=medium

  [ Mike Gabriel ]
  * Provide COPYING file in tarball. Update debian/copyright.
  * Add 025_nxcomp-fix-ftbfs-against-jpeg9a.full+lite.patch. Fix FTBFS when
    built against libjpeg9a. Thanks to Gabriel Marcano for sending this in.
    (Fixes: #578).
  * Update 027_nxcomp_abstract-X11-socket.full+lite: Add patch header
    (Description: and Author: field).
  * Add 607_nxcomp_macosx-X11-launcher-in-private-tmp.full+lite.patch. Fix check
    for launchd socket path in $DISPLAY on recent Mac OS X systems.
  * Rename 605_nxcomp_Types.h-dont-use-STL-internals-on-libc++.full.patch to
    605_nxcomp_Types.h-dont-use-STL-internals-on-libc++.full+lite.patch. It is
    an nxcomp patch that needs to be applied in the nx-libs-lite _and_ the