@@ -38,6 +38,15 @@ override_dh_clean:
 	if [ -f nxcomp/.VERSION.NoMachine ]; then mv nxcomp/.VERSION.NoMachine nxcomp/VERSION; fi
 	dh_clean
 
+override_dh_installchangelog:
+
+	### the doc/changelog file is the actual NX (redistributed) ChangeLog
+	#dh_installchangelog doc/changelog
+
+	### the nx-X11/CHANGELOG is an old upstream ChangeLog by NoMachine that prevents us from
+        ### being shouted at by lintian (while testing the package build scripts)
+	dh_installchangelog nx-X11/CHANGELOG
+
 override_dh_install:
 
 	# handle builds for Debian squeeze (non multi-arch)
@@ -108,6 +117,8 @@ override_dh_auto_build:
 	ln -s ../debian/rgb etc/rgb
 	ln -s ../debian/nxagent.keyboard etc/nxagent.keyboard
 	ln -s ../debian/x2goagent.keyboard etc/x2goagent.keyboard
+	mkdir -p doc/
+	ln -s ../debian/changelog doc/changelog
 	ln -sf debian/VERSION VERSION.x2goagent
 	ln -sf ../debian/VERSION nxcomp/VERSION
 
