@@ -61,6 +61,7 @@ nx-libs (2:3.5.0.29-0x2go2) UNRELEASED; urgency=medium
     + Correctly link config files (etc/rgb, etc/nxagent.keyboard,
       etc/x2goagent.keyboard) before dh_auto_build.
     + Add to B-D: expat.
+    + Install upstream ChangeLogs into bin:packages.
 
   * nx-libs.spec:
     + The gpg-offline bin:package is not available in our SLE repo. We can do
